RESOLVED FIXED202010
macCatalyst apps crash under TextCheckingControllerProxy::replaceRelativeToSelection when spell checking
https://bugs.webkit.org/show_bug.cgi?id=202010
Summary macCatalyst apps crash under TextCheckingControllerProxy::replaceRelativeToSe...
Tim Horton
Reported 2019-09-19 15:25:19 PDT
macCatalyst apps crash under TextCheckingControllerProxy::replaceRelativeToSelection when spell checking
Attachments
Patch (2.56 KB, patch)
2019-09-19 15:26 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2019-09-19 15:26:24 PDT
Tim Horton
Comment 2 2019-09-19 15:26:26 PDT
WebKit Commit Bot
Comment 3 2019-09-19 16:15:58 PDT
Comment on attachment 379168 [details] Patch Clearing flags on attachment: 379168 Committed r250108: <https://trac.webkit.org/changeset/250108>
WebKit Commit Bot
Comment 4 2019-09-19 16:16:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.